--- a/style.css
+++ b/style.css
@@ -123,6 +123,50 @@ color: tomato;
 .see-more p{
     text-align: end;
 }
+/* ------- */
+/* laptop -------------*/
+/* ----- */
+
+.laptop{
+    display: grid;
+    grid-template-columns:repeat(2,1fr);
+    
+}
+.laptop-img img{
+    width: 80%;
+    height: 270px;
+   
+    border-radius: 10px;
+}
+.laptop-dittels{
+    width: 100%;
+    
+    padding: 15px;
+
+}
+.laptop-dittels h2{
+    font-size: 2em;
+    
+}
+.laptop-dittels p{
+    font-weight: 700;
+    font-size: 1.1em;
+    margin-bottom: 40px;
+}
+.laptop-dittels a{
+    text-decoration: none;
+    color: white;
+    background-color: tomato;
+    padding: 13px 35px 13px 35px;
+    font-weight: 700;
+    
+}
+.laptop-dittels a i{
+    font-size:1.1em;
+    margin-top: 3px;
+    padding-left: 10px;
+}
+
 
 
 
